[gd_scene load_steps=2 format=3 uid="uid://accessibility_settings_001"]

[ext_resource type="Script" path="res://metagame/scenes/AccessibilitySettings.gd" id="1"]

[node name="AccessibilitySettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Accessibility Settings"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorblindSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ColorblindLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ColorblindSection"]
layout_mode = 2
text = "Colorblind Mode"
theme_override_font_sizes/font_size = 20

[node name="ColorblindOptions" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ColorblindSection"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NormalButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ColorblindSection/ColorblindOptions"]
layout_mode = 2
text = "Normal (No Filter)"
toggle_mode = true
button_group = SubResource("ButtonGroup_colorblind")

[node name="DeuteranopiaButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ColorblindSection/ColorblindOptions"]
layout_mode = 2
text = "Deuteranopia (Red-Green)"
toggle_mode = true
button_group = SubResource("ButtonGroup_colorblind")

[node name="ProtanopiaButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ColorblindSection/ColorblindOptions"]
layout_mode = 2
text = "Protanopia (Red-Blind)"
toggle_mode = true
button_group = SubResource("ButtonGroup_colorblind")

[node name="TritanopiaButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ColorblindSection/ColorblindOptions"]
layout_mode = 2
text = "Tritanopia (Blue-Yellow)"
toggle_mode = true
button_group = SubResource("ButtonGroup_colorblind")

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextScaleSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextScaleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TextScaleSection"]
layout_mode = 2
text = "Text Scale"
theme_override_font_sizes/font_size = 20

[node name="TextScaleOptions" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TextScaleSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SmallButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TextScaleSection/TextScaleOptions"]
layout_mode = 2
text = "Small (0.8x)"
toggle_mode = true
button_group = SubResource("ButtonGroup_textscale")

[node name="NormalButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TextScaleSection/TextScaleOptions"]
layout_mode = 2
text = "Normal (1.0x)"
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_textscale")

[node name="LargeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TextScaleSection/TextScaleOptions"]
layout_mode = 2
text = "Large (1.3x)"
toggle_mode = true
button_group = SubResource("ButtonGroup_textscale")

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TogglesSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScreenShakeCheck" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/TogglesSection"]
layout_mode = 2
button_pressed = true
text = "Enable Screen Shake Effects"

[node name="KeyboardNavCheck" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/TogglesSection"]
layout_mode = 2
button_pressed = true
text = "Enable Keyboard Navigation"

[node name="HSeparator4" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ControlsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ControlsSection"]
layout_mode = 2
text = "Control Rebinding"
theme_override_font_sizes/font_size = 20

[node name="RebindButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ControlsSection"]
layout_mode = 2
text = "Customize Controls..."

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResetButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset to Defaults"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[sub_resource type="ButtonGroup" id="ButtonGroup_colorblind"]

[sub_resource type="ButtonGroup" id="ButtonGroup_textscale"]
